<RelativeLayout
    android:theme="@style/Theme.AppWidget.AppWidgetContainerParent"
    android:id="@android:id/background"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Widget.AppWidget.AppWidget.Container"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="18dp">
        <TextView
            android:id="@+id/tv_app_name"
            android:textSize="13sp"
            android:textColor="@color/primary_lite"
            android:layout_width="55dp"
            android:layout_height="18dp"
            android:text="@string/app_name"
            android:maxLines="1"
            android:maxLength="12"
            style="@style/TextAppearance.AppCompat.Medium" />

        <ImageButton
            android:id="@+id/refresh_button"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tv_app_name"
            android:background="@drawable/widget_button_background"
            android:src="@drawable/ic_refresh_button" />

        <TextView
            android:textSize="13sp"
            android:textColor="@color/gray"
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/sample_date"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/tv_week_number"
            style="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:textSize="13sp"
            android:textColor="@color/gray"
            android:id="@+id/tv_week_number"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/widget_sample_week_number"
            android:maxLength="8"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/tv_week"
            style="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:textSize="13sp"
            android:id="@+id/tv_week"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/widget_sample_weekday"
            android:layout_alignParentEnd="true"
            style="@style/TextAppearance.AppCompat.Medium" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/rl_title">

        <TextView
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:text="@string/widget_title_today"
            android:textColor="@color/gray"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_weight="1.0"
            android:gravity="start" />
        <TextView
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:layout_width="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="18dp"
            android:text="@string/widget_title_tomorrow"
            android:layout_weight="1.0"
            android:gravity="start"/>
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_below="@id/ll_title">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5">
            <ListView
                android:id="@+id/lv_course_today"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="2dp" />
            <TextView
                android:textSize="11sp"
                android:gravity="center"
                android:id="@+id/empty_today"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty_course"
                android:textColor="@android:color/darker_gray"
                android:lineSpacingExtra="8dp"
                android:textAlignment="center" />
        </FrameLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            android:background="#b7b7b7"
            android:scaleType="fitXY"
            android:contentDescription="@string/widget_divider" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <ListView
                android:id="@+id/lv_course_next_day"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#00000000"
                android:dividerHeight="2dp" />
            <TextView
                android:textSize="11sp"
                android:gravity="center"
                android:id="@+id/empty_next_day"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty_course"
                android:textColor="@android:color/darker_gray"
                android:lineSpacingExtra="8dp"
                android:textAlignment="center" />

        </FrameLayout>

    </LinearLayout>
</RelativeLayout>
